--- a/data/cards/yugipedia1048717.yaml
+++ b/data/cards/yugipedia1048717.yaml
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「トリックスター」融合・Ｌモンスターのいずれかが存在する場合に発動できる。このカードを手札から特殊召喚する。②：このカードが「トリックスター」ＬモンスターのＬ素材として墓地へ送られた場合に発動できる。デッキから「トリックスター・フュージョン」か「トリックスター・ディフュージョン」１枚を手札に加える。
   ko:
   zh-TW:
   zh-CN:
