--- a/data/cards/yugipedia1048719.yaml
+++ b/data/cards/yugipedia1048719.yaml
@@ -16,13 +16,15 @@ name:
 text:
   en: |-
     1 non-Link "Trickstar" monster
-    You can only Special Summon "Trickstar Colchica(s)" once per turn. When a monster(s) is destroyed by a battle involving your "Trickstar" monster while this card is in your GY: You can banish this card, then target 1 of those destroyed monsters; inflict damage to your opponent equal to the ATK it had on the field.  You can only use this effect of "Trickstar Colchica" once per turn.
+    You can only Special Summon "Trickstar Colchica(s)" once per turn. When a monster(s) is destroyed by battle involving your "Trickstar" monster while this card is in your GY: You can banish this card, then target 1 of those destroyed monsters; inflict damage to your opponent equal to its ATK. You can only use this effect of "Trickstar Colchica" once per turn.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    Ｌモンスター以外の「トリックスター」モンスター１体
+    自分は「トリックスター・コルチカ」を１ターンに１度しか特殊召喚できず、その効果は１ターンに１度しか使用できない。①：このカードが墓地に存在する状態で、自分の「トリックスター」モンスターの戦闘でモンスターが破壊された時、このカードを除外し、その破壊されたモンスター１体を対象として発動できる。そのモンスターの攻撃力分のダメージを相手に与える。
   ko:
   zh-TW:
   zh-CN:
