--- a/data/cards/yugipedia1048720.yaml
+++ b/data/cards/yugipedia1048720.yaml
@@ -16,13 +16,15 @@ name:
 text:
   en: |-
     2 "Trickstar" monsters
-    If this card is Link Summoned: You can add 1 "Blue Tears" card from your Deck to your hand. If you have a Fusion Monster on your field or in your GY: You can target 1 "Trickstar" monster in your GY; Special Summon it. If either player takes effect damage: You can target 1 face-up card on the field; destroy it. You can only use each effect of "Trickstar Noble Angel" once per turn.
+    If this card is Link Summoned: You can add 1 "Blue Tears" card from your Deck to your hand. If you have a Fusion Monster on your field or in your GY: You can target 1 "Trickstar" monster in your GY; Special Summon it. If effect damage is inflicted: You can target 1 face-up card on the field; destroy it. You can only use each effect of "Trickstar Noble Angel" once per turn.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「トリックスター」モンスター２体
+    このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＬ召喚した場合に発動できる。デッキから「青い涙」カード１枚を手札に加える。②：自分のフィールドか墓地に融合モンスターが存在する場合、自分の墓地の「トリックスター」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。③：自分か相手が効果ダメージを受けた場合、フィールドの表側表示カード１枚を対象として発動できる。そのカードを破壊する。
   ko:
   zh-TW:
   zh-CN:
