--- a/data/cards/yugipedia1048721.yaml
+++ b/data/cards/yugipedia1048721.yaml
@@ -18,13 +18,14 @@ text:
     Activate 1 of these effects;
     ● Fusion Summon 1 "Trickstar" Fusion Monster from your Extra Deck, by banishing its materials from your GY.
     ● Immediately after this effect resolves, Link Summon 1 "Trickstar" monster.
-    You can banish this card from your GY, then target 1 "Trickstar" monster you control; this turn, your opponent's monsters cannot target monsters for attacks, except that monster, while you control it. You can only use each effect of "Trickstar Diffusion" once per turn.
+    You can banish this card from your GY, then target 1 "Trickstar" monster you control; this turn, your opponent's monsters cannot target monsters for attacks, except that monster, while it is face-up on your field. You can only use each effect of "Trickstar Diffusion" once per turn.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：以下の効果から１つを選択して発動できる。●自分の墓地のモンスターを融合素材として除外し、「トリックスター」融合モンスター１体を融合召喚する。●「トリックスター」Ｌモンスター１体のＬ召喚を行う。②：墓地のこのカードを除外し、自分フィールドの「トリックスター」モンスター１体を対象として発動できる。このターン、そのモンスターが自分フィールドに表側表示で存在する限り、相手モンスターは対象のモンスターしか攻撃対象に選択できない。
   ko:
   zh-TW:
   zh-CN:
