--- a/rush.yaml
+++ b/rush.yaml
@@ -137885,3 +137885,65 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1048769
+---
+konami_id:
+name:
+  en: Dice Key Nel
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダイスキー・ネル
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have a face-up monster with an effect that requires a die roll on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 3
+atk: 600
+def: 1200
+series:
+- Dice
+images:
+- index: 1
+  image: DiceKeyNel-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP068
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1048772
