--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -2392,7 +2392,7 @@ Blue Tears:
   fr: Larmes Bleues
   it: Lacrime Blu
   pt: Lágrimas Azuis
-  ja: 青い涙
+  ja: <ruby>青<rt>あお</rt></ruby>い<ruby>涙<rt>なみだ</rt></ruby>
   ja_romaji: Aoi Namida
   ko: 파란눈물
   ko_rr: Parannunmul
