--- a/data/rush/19999.yaml
+++ b/data/rush/19999.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. You can only activate the monster effects of LIGHT Attribute Spellcaster Type monsters until the end of this turn.
+    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. You cannot activate monster effects until the end of this turn, except those of LIGHT Attribute Spellcaster Type monsters.
   de:
   es:
   fr:
