--- a/data/rush/yugipedia1048633.yaml
+++ b/data/rush/yugipedia1048633.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Ultra Rare
+  - set_number: RD/ORP2-JP058
+    set_name: Yu-Gi-Oh! GO RUSH!! Complete Challenge 5
+    rarities:
+    - Rush Rare
 is_translation_unofficial:
   name:
     en: true
