--- a/rush.yaml
+++ b/rush.yaml
@@ -133153,7 +133153,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. You can only activate the monster effects of LIGHT Attribute Spellcaster Type monsters until the end of this turn.
+    Draw 1 card. Then, you can Special Summon 1 Level 5 or higher LIGHT Attribute Spellcaster Type monster from your Graveyard face-up to your field. You cannot activate monster effects until the end of this turn, except those of LIGHT Attribute Spellcaster Type monsters.
   de:
   es:
   fr:
@@ -137814,6 +137814,10 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Ultra Rare
+  - set_number: RD/ORP2-JP058
+    set_name: Yu-Gi-Oh! GO RUSH!! Complete Challenge 5
+    rarities:
+    - Rush Rare
 is_translation_unofficial:
   name:
     en: true
