--- a/data/rush/yugipedia1050064.yaml
+++ b/data/rush/yugipedia1050064.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the battle position of 1 monster your opponent controls. Then, this turn, this card inflicts piercing battle damage. Then, if "Sevens Road Magician" is in your GY, this turn, this card cannot be destroyed by card effects.
+    Change the battle position of 1 monster on your opponent's field. Then, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn. Then, if you have "Sevens Road Magician" in your Graveyard, this card cannot be destroyed by card effects this turn.
   de:
   es:
   fr:
