--- a/data/rush/yugipedia1048769.yaml
+++ b/data/rush/yugipedia1048769.yaml
@@ -55,6 +55,7 @@ sets:
   - set_number: RD/ORP2-JP067
     set_name: Over Rush Pack 2
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
