--- a/data/rush/yugipedia1050064.yaml
+++ b/data/rush/yugipedia1050064.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the battle position of 1 monster on your opponent's field. Then, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn. Then, if you have "Sevens Road Magician" in your Graveyard, this card cannot be destroyed by card effects this turn.
+    Change the battle position of 1 monster on your opponent's field. Then, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn. If you have "Sevens Road Magician" in your Graveyard, this card cannot be destroyed by card effects this turn.
   de:
   es:
   fr:
@@ -64,6 +64,7 @@ sets:
   - set_number: RD/ORP2-JP062
     set_name: Over Rush Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
