--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -3058,6 +3058,18 @@ Geargiano:
   ko_rr: Gieogieono
   zh-TW:
   zh-CN:
+Koala:
+  de: Koala
+  es: Koala
+  fr: Koala
+  it:
+  pt: Coala
+  ja: コアラ
+  ja_romaji: Koara
+  ko: 코알라
+  ko_rr: Koalla
+  zh-TW: 樹熊
+  zh-CN:
 Runick:
   de: Runisch
   es: Rúnico/a
