--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -3058,6 +3058,18 @@
   ko_rr: Gieogieono
   zh-TW:
   zh-CN:
+- en: Koala
+  de: Koala
+  es: Koala
+  fr: Koala
+  it:
+  pt: Coala
+  ja: コアラ
+  ja_romaji: Koara
+  ko: 코알라
+  ko_rr: Koalla
+  zh-TW: 樹熊
+  zh-CN:
 - en: Runick
   de: Runisch
   es: Rúnico/a
