--- a/data/rush/15806.yaml
+++ b/data/rush/15806.yaml
@@ -32,7 +32,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the total Level of the monsters sent to the Graveyard to meet the requirement] x 100 until the end of this turn. Also this turn, you can only attack with this card, can only declare an attack on Attack Position monsters, and can attack all monsters on the opponent's monsters once each.
+    This card gains ATK equal to [the total Level of the monsters sent to the Graveyard to meet the requirement] x 100 until the end of this turn. Also this turn, you can only attack with this card, can only declare an attack on Attack Position monsters, and can attack all opponent's monsters once each.
   de: |-
     Diese Karte erhält bis zum Ende dieses Spielzugs ATK in Höhe [der Summe der Stufe aller Monster, die du auf den Friedhof gelegt hast, um die Bedingung zu erfüllen] x 100. In diesem Spielzug kannst du außerdem nur mit dieser Karte angreifen, nur Angriffe auf Monster in Angriffspositionen deklarieren und alle Monster auf den Monstern des Gegners jeweils einmal angreifen.
   es: |-
