--- a/data/rush/16317.yaml
+++ b/data/rush/16317.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Materializes alongside a flash of lightening. This electric creature can zap through machinery to short-circuit their being.
+    Materializes alongside a flash of lightning. This electric creature can zap through machinery to short-circuit their being.
   de:
   es:
   fr:
