--- a/data/rush/16347.yaml
+++ b/data/rush/16347.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up LIGHT Attribute Fiend Type monster on your field gains 1000 ATK until the end of this turn. Then, you can change its battle position (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+    1 face-up LIGHT Attribute Fiend Type monster on your field gains 1000 ATK until the end of this turn. Then, you can change that monster's battle position (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
   de:
   es:
   fr:
@@ -66,7 +66,4 @@ sets:
     set_name: Strongest Battle Deck Roa - Demon's Rock
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716516
