--- a/rush.yaml
+++ b/rush.yaml
@@ -31396,7 +31396,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Activate this card if your opponent has 2 or more monsters on their field.
+    Your opponent has 2 or more monsters on their field.
   de:
   es:
   fr:
@@ -31410,7 +31410,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, all face-up LIGHT Attribute Fiend Type monsters on the field cannot be destroyed by Trap Card effects.
+    While this card is face-up in the Field Zone, face-up LIGHT Attribute Fiend Type monsters on the field cannot be destroyed by Trap Card effects.
   de:
   es:
   fr:
@@ -31448,9 +31448,6 @@ sets:
     set_name: Strongest Battle Deck Roa - Demon's Rock
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716513
 ---
 konami_id: 16349
@@ -42534,7 +42531,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A police officer who keeps the peace in the local area. She is struggling to solve certain missing persons cases.
+    A young investigator who protects the peace in the city. She is struggling to solve a certain disappearance case.
   de:
   es:
   fr:
@@ -42574,9 +42571,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 711190
 ---
 konami_id: 16785
@@ -59352,7 +59346,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up monsters on your opponent's field lose 400 ATK/DEF until the end of this turn. Then, if you have 3 Thunder Type monsters on your field, you can draw 1 card.
+    All face-up monsters on your opponent's field lose 400 ATK/DEF until the end of this turn. If you have 3 face-up Thunder Type monsters on your field, you can draw 1 card.
   de:
   es:
   fr:
@@ -59380,11 +59374,6 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714289
 ---
 konami_id: 17332
@@ -70243,7 +70232,7 @@ yugipedia_page_id: 715826
 ---
 konami_id: 17698
 name:
-  en: Dark Skeleton Dead Ruler
+  en: Dark Doom Dread Ruler
   de:
   es:
   fr:
@@ -70293,7 +70282,7 @@ series:
 - Ghost Story
 images:
 - index: 1
-  image: DarkSkeletonDeadRuler-RDMRP1-JP-UR.png
+  image: DarkDoomDreadRuler-RDMRP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP071
@@ -70305,11 +70294,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Ultra Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714475
 ---
 konami_id: 17699
@@ -99149,7 +99133,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 face-up Fiend Type monster from your field to the Graveyard.
+    Send 1 face-up Fiend Type monster on your field to the Graveyard.
   de:
   es:
   fr:
@@ -99163,7 +99147,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Up to 2 face-up Fiend Type monsters on your field cannot be destroyed by your opponent's Trap Card effects this turn.
+    Choose up to 2 face-up Fiend Type monsters on your field. This turn, the chosen monster(s) cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -99195,9 +99179,6 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716498
 ---
 konami_id: 18711
@@ -108306,7 +108287,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of face-up "Harpie Lady" on the field] x 300 and [the number of face-up "Harpie Lady Sisters" on the field] x 900.
+    This card gains ATK equal to [the number of face-up "Harpie Lady" on the field] x 300 plus [the number of face-up "Harpie Lady Sisters" the field] x 900.
   de:
   es:
   fr:
@@ -108342,9 +108323,6 @@ sets:
     rarities:
     - Normal Parallel Rare
     - Secret Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 972992
 ---
 konami_id: 19105
@@ -119252,9 +119230,6 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 1011314
 ---
 konami_id: 19565
@@ -134277,13 +134252,14 @@ atk: 1400
 def: 1400
 images:
 - index: 1
-  image: KanantheSwordmistress-RDTDPR-JP-OP.png
+  image: KanantheSwordmistress-RDTDPR-JP-NPR.png
 sets:
   ja:
   - set_number: RD/TDPR-JP001
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
+    - Super Rare
 yugipedia_page_id: 1037854
 ---
 konami_id: 20051
