--- a/data/cards/69884162.yaml
+++ b/data/cards/69884162.yaml
@@ -108,6 +108,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Destruction'
     rarities:
     - Common
+    - Secret Rare
   de:
   - set_number: TAEV-DE018
     set_name: Tactical Evolution
