--- a/data/rush/20052.yaml
+++ b/data/rush/20052.yaml
@@ -53,6 +53,7 @@ sets:
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
