--- a/data/rush/18694.yaml
+++ b/data/rush/18694.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. This card can attack twice during this turn if at least 1 of the results is heads. Then, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn and the result is 3 heads.
+    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. This card can attack twice during this turn if at least 1 of the results is heads. Then, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn and the result is 3 heads.
   de:
   es:
   fr:
