--- a/data/rush/20053.yaml
+++ b/data/rush/20053.yaml
@@ -51,6 +51,7 @@ sets:
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
