--- a/data/rush/20054.yaml
+++ b/data/rush/20054.yaml
@@ -49,6 +49,7 @@ sets:
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
