--- a/rush.yaml
+++ b/rush.yaml
@@ -33510,7 +33510,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card loses 1000 ATK until the end of this turn. This turn, this card cannot attack directly, can attack all monsters on the opponent's field once each, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    This card loses 1000 ATK until the end of this turn. This turn, this card cannot attack directly, can attack all opponent's monsters once each, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -44473,7 +44473,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up non-LIGHT Attribute monsters on the field lose 300 ATK, and all face-up Level 9 LIGHT Attribute monsters on the field cannot be destroyed by Trap Card effects.
+    While this card is face-up in the Field Zone, face-up non-LIGHT Attribute monsters on the field lose 300 ATK, and face-up Level 9 LIGHT Attribute monsters on the field cannot be destroyed by Trap Card effects.
   de:
   es:
   fr:
@@ -51039,7 +51039,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up Level 7 or higher Machine Type monsters on the field gain 400 ATK, and all face-up Level 10 Machine Type monsters on the field cannot be destroyed by Spell/Trap Card effects.
+    While this card is face-up in the Field Zone, face-up Level 7 or higher Machine Type monsters on the field gain 400 ATK, and face-up Level 10 Machine Type monsters on the field cannot be destroyed by Spell/Trap Card effects.
   de:
   es:
   fr:
@@ -57584,7 +57584,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of DARK Attribute Spellcaster Type monsters with different names in your Graveyard] x 300. If you have 7 or more DARK Attribute Spellcaster Type monsters in your Graveyard, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    This card gains ATK equal to [the number of DARK Attribute Spellcaster Type monsters with different names in your Graveyard] x 300. If you have 7 or more DARK Attribute Spellcaster Type monsters in your Graveyard, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -59604,7 +59604,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, all face-up Dinosaur Type monsters on the field cannot be destroyed by monster effects.
+    While this card is face-up in the Field Zone, face-up Dinosaur Type monsters on the field cannot be destroyed by monster effects.
   de:
   es:
   fr:
@@ -67955,7 +67955,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of monsters on your opponent's field] x 500. If you have 10 or more monsters in your Graveyard, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    This card gains ATK equal to [the number of monsters on your opponent's field] x 500. If you have 10 or more monsters in your Graveyard, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -83899,7 +83899,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of face-up Spell Cards on your field] x 200. If the equipped monster is DARK Attribute, it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    The equipped monster gains ATK equal to [the number of face-up Spell Cards on your field] x 200. If the equipped monster is DARK Attribute, it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -98117,7 +98117,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. This card can attack twice during this turn if at least 1 of the results is heads. Then, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn and the result is 3 heads.
+    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. This card can attack twice during this turn if at least 1 of the results is heads. Then, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn and the result is 3 heads.
   de:
   es:
   fr:
@@ -100456,7 +100456,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the battle position of 1 monster on your opponent's field. Then, if this card is in Maximum Mode, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    Change the battle position of 1 monster on your opponent's field. Then, if this card is in Maximum Mode, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
@@ -100899,7 +100899,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can choose 1 monster in Maximum Mode on your field. If you do, while it is face-up, it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    Draw 1 card. Then, you can choose 1 monster in Maximum Mode on your field. If you do, while it is face-up, it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -108355,7 +108355,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 800 ATK/400 DEF. If you have 1 or 3 face-up monsters on your field, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    The equipped monster gains 800 ATK/400 DEF. If you have 1 or 3 face-up monsters on your field, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -114793,7 +114793,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster cannot be destroyed by your opponent's card effects. Then, if you have an Equip Spell Card in your Graveyard, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    The equipped monster cannot be destroyed by your opponent's card effects. Then, if you have an Equip Spell Card in your Graveyard, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -116676,7 +116676,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up Level 8 or higher Dragon Type monsters on the field gain 500 ATK, and all face-up Dragon Type Legend monsters on the field cannot be destroyed by card effects.
+    While this card is face-up in the Field Zone, face-up Level 8 or higher Dragon Type monsters on the field gain 500 ATK, and face-up Dragon Type Legend monsters on the field cannot be destroyed by card effects.
   de:
   es:
   fr:
@@ -134319,6 +134319,7 @@ sets:
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -134381,6 +134382,7 @@ sets:
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -134441,6 +134443,7 @@ sets:
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -134499,6 +134502,7 @@ sets:
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
@@ -136452,7 +136456,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle monsters from your Graveyard into the Deck equal to [the number of monsters on your opponent's field]. This turn, this card can attack monsters a number of times, up to [the number of monsters shuffled by this effect]. Then, if you shuffled 3 monsters by this effect, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    Shuffle monsters from your Graveyard into the Deck equal to [the number of monsters on your opponent's field]. This turn, this card can attack monsters a number of times, up to [the number of monsters shuffled by this effect]. Then, if you shuffled 3 monsters by this effect, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
