--- a/data/cards/49306994.yaml
+++ b/data/cards/49306994.yaml
@@ -49,6 +49,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Destruction'
     rarities:
     - Common
+    - Secret Rare
   de:
   - set_number: DUSA-DE032
     set_name: Duelist Saga
