--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -1148,6 +1148,17 @@ sets:
     set_name: 'Yu-Gi-Oh! Duel Monsters: The Legend of Duelist Quarter Century attendance cards'
     rarities:
     - Quarter Century Secret Rare
+  - set_number: QCCP-JP001
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Ultimate Rare
+    - Quarter Century Secret Rare
+  - set_number: QCPC-JP001
+    set_name: Quarter Century Unity & Pride Campaign side:Pride
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: SDK-K001
     set_name: 'Starter Deck: Kaiba'
