--- a/data/cards/yugipedia1048155.yaml
+++ b/data/cards/yugipedia1048155.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>刻まれし魔の大聖棺<rt>デモンスミス・セクエンツィア</rt></ruby>
   ja_romaji: Demonsumisu Sekuentsia
-  ko:
+  ko: 데먼스미스 세퀜치아
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25,7 +25,10 @@ text:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    악마족 / 빛 속성 몬스터를 포함하는 몬스터 2장
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다.
+    ①: 자신 메인 페이즈에 발동할 수 있다. 자신 묘지의 몬스터를 융합 소재로 하여 덱으로 되돌리고, 악마족 융합 몬스터 1장을 융합 소환한다. ②: 링크 몬스터 이외의 자신 필드의 악마족 / 빛 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 자신의 필드 / 묘지에서 이 카드를 이하의 효과를 가진 장착 마법 카드로 취급하여 그 자신의 몬스터에 장착한다.●상대는 장착 몬스터를 효과의 대상으로 할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Monster
