--- a/data/cards/yugipedia1048158.yaml
+++ b/data/cards/yugipedia1048158.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>刻まれし魔の詠聖<rt>デモンスミス・トラクトゥス</rt></ruby>
   ja_romaji: Demonsumisu Torakutusu
-  ko:
+  ko: 데먼스미스 트락투스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 덱에서 악마족 / 빛 속성 몬스터 1장을 패에 넣는다. 그 후, 자신의 패를 1장 고르고 버린다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신의 패 / 필드의 몬스터를 융합 소재로 하여, "데먼스미스" 융합 몬스터 1장을 융합 소환한다.
   zh-TW:
   zh-CN:
 card_type: Spell
