--- a/data/cards/yugipedia1048162.yaml
+++ b/data/cards/yugipedia1048162.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>刻まれし魔の楽園<rt>デモンスミス・イン・パラディズム</rt></ruby>
   ja_romaji: Demonsumisu in Paradizumu
-  ko:
+  ko: 데먼스미스 인 파라디숨
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   it:
   pt:
   ja:
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 레벨 7 이상의 악마족 / 빛 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터 이외의 필드의 카드를 전부 묘지로 보낸다. ②: 이 카드가 묘지에 존재하는 상태에서 상대가 몬스터를 특수 소환했을 경우, 이 카드를 제외하고 발동할 수 있다. 덱 / 엑스트라 덱에서 "데먼스미스" 몬스터 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN:
 card_type: Trap
