--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -93,6 +93,8 @@ images:
 - index: 7
   image: DarkMagicianGirl-QCCU-JP-QCScR-AA.png
   illustration: DarkMagicianGirl-OW-7.png
+- index: 8
+  image: DarkMagicianGirl-QCUC-JP-OP.png
 sets:
   en:
   - set_number: RDS-ENSE2
