--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -73,6 +73,8 @@ images:
   illustration: BlueEyesWhiteDragon-OW-4.png
 - index: 10
   image: BlueEyesWhiteDragon-TD02-JP-QCScR.png
+- index: 11
+  image: BlueEyesWhiteDragon-QCPC-JP-OP.png
 sets:
   en:
   - set_number: SKE-001
