--- a/data/cards/74677422.yaml
+++ b/data/cards/74677422.yaml
@@ -68,6 +68,8 @@ images:
 - index: 8
   image: RedEyesBlackDragon-QCCP-JP-OP.png
   illustration: RedEyesBlackDragon-OW-5.png
+- index: 9
+  image: RedEyesBlackDragon-QCPC-JP-OP.png
 sets:
   en:
   - set_number: PCJ-EN001
