--- a/data/cards/18144506.yaml
+++ b/data/cards/18144506.yaml
@@ -48,6 +48,8 @@ images:
 - index: 2
   image: HarpiesFeatherDuster-SDBT-EN-C-1E.png
   illustration: HarpiesFeatherDuster-MADU-EN-VG-artwork.png
+- index: 3
+  image: HarpiesFeatherDuster-QCCP-JP-OP.png
 sets:
   en:
   - set_number: TP8-EN002
