--- a/data/tcg-speed-skill/yugipedia1050271.yaml
+++ b/data/tcg-speed-skill/yugipedia1050271.yaml
@@ -13,7 +13,8 @@ name:
   zh-CN:
 type_line: Hassleberry / Skill
 activation:
-  en:
+  en: |-
+    Flip this card over when you activate this Skill.
   de:
   es:
   fr:
@@ -39,7 +40,7 @@ effect:
   zh-CN:
 character: Tyranno Hassleberry
 image_front: FoodChain-SGX4-NA-C-1E.png
-image_back:
+image_back: TyrannoHassleberry-SkillCard-EN-Back-2.png
 sets:
   en:
   - set_number: SGX4-ENS03
