--- a/data/tcg-speed-skill/yugipedia1050273.yaml
+++ b/data/tcg-speed-skill/yugipedia1050273.yaml
@@ -13,7 +13,8 @@ name:
   zh-CN:
 type_line: Jim / Skill
 activation:
-  en:
+  en: |-
+    At the start of the Duel, flip this card over.
   de:
   es:
   fr:
@@ -37,7 +38,7 @@ effect:
   zh-CN:
 character: Jim Crocodile Cook
 image_front: MajorinPaleontology-SGX4-NA-C-1E.png
-image_back:
+image_back: JimCrocodileCook-SkillCard-EN-Back.png
 sets:
   en:
   - set_number: SGX4-ENS04
