--- a/data/tcg-speed-skill/yugipedia1050267.yaml
+++ b/data/tcg-speed-skill/yugipedia1050267.yaml
@@ -13,7 +13,8 @@ name:
   zh-CN:
 type_line: Jaden / Skill
 activation:
-  en:
+  en: |-
+    At the start of the Duel, flip this card over.
   de:
   es:
   fr:
@@ -37,7 +38,7 @@ effect:
   zh-CN:
 character: Jaden Yuki
 image_front: StraightoutofNeoSpace-SGX4-NA-C-1E.png
-image_back:
+image_back: JadenYuki-SkillCard-EN-Back-2.png
 sets:
   en:
   - set_number: SGX4-ENS01
