--- a/data/tcg-speed-skill/yugipedia1050279.yaml
+++ b/data/tcg-speed-skill/yugipedia1050279.yaml
@@ -13,7 +13,8 @@ name:
   zh-CN:
 type_line: Hassleberry / Skill
 activation:
-  en:
+  en: |-
+    At the start of the Duel, flip this card over.
   de:
   es:
   fr:
@@ -39,7 +40,7 @@ effect:
   zh-CN:
 character: Tyranno Hassleberry
 image_front: DinoBrainImmunity-SGX4-NA-C-1E.png
-image_back:
+image_back: TyrannoHassleberry-SkillCard-EN-Back.png
 sets:
   en:
   - set_number: SGX4-ENS07
