--- a/data/tcg-speed-skill/yugipedia1050283.yaml
+++ b/data/tcg-speed-skill/yugipedia1050283.yaml
@@ -13,7 +13,8 @@ name:
   zh-CN:
 type_line: Society / Skill
 activation:
-  en:
+  en: |-
+    At the start of the Duel, flip this card over.
   de:
   es:
   fr:
@@ -37,7 +38,7 @@ effect:
   zh-CN:
 character: Society of Light
 image_front: InvitationtotheSociety-SGX4-NA-C-1E.png
-image_back:
+image_back: SocietyofLight-SkillCard-EN-Back.png
 sets:
   en:
   - set_number: SGX4-ENS09
