--- a/data/tcg-speed-skill/yugipedia1050285.yaml
+++ b/data/tcg-speed-skill/yugipedia1050285.yaml
@@ -13,7 +13,8 @@ name:
   zh-CN:
 type_line: Belowski / Skill
 activation:
-  en:
+  en: |-
+    Flip this card over when you activate this Skill.
   de:
   es:
   fr:
@@ -39,7 +40,7 @@ effect:
   zh-CN:
 character: Belowski
 image_front: MokeyMokeyMadness-SGX4-NA-C-1E.png
-image_back:
+image_back: Belowski-SkillCard-EN-Back.png
 sets:
   en:
   - set_number: SGX4-ENS10
