--- a/data/tcg-speed-skill/yugipedia1050289.yaml
+++ b/data/tcg-speed-skill/yugipedia1050289.yaml
@@ -13,7 +13,8 @@ name:
   zh-CN:
 type_line: Aster / Skill / Continuous Spell
 activation:
-  en:
+  en: |-
+    You draw 1 less card at the beginning of the Duel. During your Main Phase, you can activate this Skill as a Continuous Spell Card.
   de:
   es:
   fr:
@@ -39,7 +40,7 @@ effect:
   zh-CN:
 character: Aster Phoenix
 image_front: ShoulderingaDestiny-SGX4-NA-C-1E.png
-image_back:
+image_back: AsterPhoenix-SkillCard-EN-Back-2.png
 sets:
   en:
   - set_number: SGX4-ENS12
