--- a/data/cards/kdb20178.yaml
+++ b/data/cards/kdb20178.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20178
 password:
 name:
   en: Ancient Gear Dragon
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードは特殊召喚できない。このカード名の②の効果は１ターンに１度しか使用できない。①：自分フィールドのモンスターが、存在しない場合または機械族・地属性モンスターのみの場合、このカードはリリースなしで召喚できる。②：相手が魔法・罠カードの効果を発動した時、自分の手札・フィールド（表側表示）の機械族モンスター１体またはデッキの「古代の機械巨人」１体を墓地へ送って発動できる。その効果を無効にする。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +45,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
