--- a/data/cards/kdb20039.yaml
+++ b/data/cards/kdb20039.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20039
 password:
 name:
   en: Infernity Queen
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードが墓地に存在し、自分の手札が０枚の場合、自分の墓地から闇属性モンスター１体を除外し、自分フィールドの闇属性モンスター１体を対象として発動できる。このターン、そのモンスターは直接攻撃できる。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +45,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg:
+  ocg: Unlimited
 is_translation_unofficial:
   text:
     en: true
