--- a/data/cards/18144506.yaml
+++ b/data/cards/18144506.yaml
@@ -50,6 +50,7 @@ images:
   illustration: HarpiesFeatherDuster-MADU-EN-VG-artwork.png
 - index: 3
   image: HarpiesFeatherDuster-QCCP-JP-OP.png
+  illustration: HarpiesFeatherDuster-OW-2.png
 sets:
   en:
   - set_number: TP8-EN002
