--- a/data/tcg-speed-skill/yugipedia1050271.yaml
+++ b/data/tcg-speed-skill/yugipedia1050271.yaml
@@ -27,7 +27,7 @@ activation:
 effect:
   en: |-
     Once per turn, you can apply 1 of these Skills.
-    ● Destroy 1 Dinosaur or Reptile monster you control, then Special Summon 1 Dinosaur monster whose Level is higher from your hand or Deck.
+    ● Destroy 1 Dinosaur or Reptile monster you control, then Special Summon 1 Dinosaur monster whose Level is 1 higher from your hand or Deck.
     ● You can Tribute Summon 1 Dinosaur monster by banishing 2 Dinosaur and/or Reptile monsters from your GY instead of Tributing (it is still treated as a Tribute Summon).
   de:
   es:
