--- a/data/cards/yugipedia1048719.yaml
+++ b/data/cards/yugipedia1048719.yaml
@@ -39,10 +39,10 @@ series:
 - Trickstar
 images:
 - index: 1
-  image: TrickstarColchica-OW.png
+  image: TrickstarColchica-DP29-JP-OP.png
 sets:
   ja:
-  - set_number: ????-JP0??
+  - set_number: DP29-JP0??
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
 limit_regulation:
