--- a/data/cards/yugipedia1048722.yaml
+++ b/data/cards/yugipedia1048722.yaml
@@ -32,10 +32,10 @@ series:
 - Blue Tears
 images:
 - index: 1
-  image: MaidenofBlueTears-OW.png
+  image: MaidenofBlueTears-DP29-JP-OP.png
 sets:
   ja:
-  - set_number: ????-JP0??
+  - set_number: DP29-JP0??
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
 limit_regulation:
