--- a/data/cards/yugipedia1048718.yaml
+++ b/data/cards/yugipedia1048718.yaml
@@ -39,12 +39,13 @@ series:
 - Trickstar
 images:
 - index: 1
-  image: TrickstarBandDrummatis-OW.png
+  image: TrickstarBandDrummatis-DP29-JP-OP.png
 sets:
   ja:
-  - set_number: ????-JP0??
+  - set_number: DP29-JP0??
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
