--- a/data/cards/yugipedia1048720.yaml
+++ b/data/cards/yugipedia1048720.yaml
@@ -40,12 +40,14 @@ series:
 - Trickstar
 images:
 - index: 1
-  image: TrickstarNobleAngel-OW.png
+  image: TrickstarNobleAngel-DP29-JP-OP.png
 sets:
   ja:
-  - set_number: ????-JP0??
+  - set_number: DP29-JP040
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
