--- a/data/cards/yugipedia1048721.yaml
+++ b/data/cards/yugipedia1048721.yaml
@@ -36,10 +36,10 @@ series:
 - Trickstar
 images:
 - index: 1
-  image: TrickstarDiffusion-OW.png
+  image: TrickstarDiffusion-DP29-JP-OP.png
 sets:
   ja:
-  - set_number: ????-JP0??
+  - set_number: DP29-JP0??
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
 limit_regulation:
