--- a/data/cards/79814787.yaml
+++ b/data/cards/79814787.yaml
@@ -8,7 +8,7 @@ name:
   it: La Pietra Bianca della Leggenda
   pt: A Pedra Branca das Lendas
   ja: <ruby>伝説の白石<rt>ホワイト・オブ・レジェンド</rt></ruby>
-  ja_romaji: Howaito obu Rejendo
+  ja_romaji: Howaito Obu Rejendo
   ko: 전설의 백석
   ko_rr: Jeonseol-ui Baekseok
   zh-TW: 傳說的白石
