--- a/data/cards/80453041.yaml
+++ b/data/cards/80453041.yaml
@@ -1,5 +1,5 @@
 konami_id: 20037
-password:
+password: 80453041
 name:
   en: Phantom of Yubel
   de:
@@ -40,7 +40,7 @@ series:
 - Yubel
 images:
 - index: 1
-  image: PhantomofYubel-VX04-JP-OP.png
+  image: PhantomofYubel-VX04-JP-UR.png
 sets:
   ja:
   - set_number: VX04-JP002
@@ -56,4 +56,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1044502
-fake_password: 100436002
