--- a/data/cards/53008933.yaml
+++ b/data/cards/53008933.yaml
@@ -1,5 +1,5 @@
 konami_id: 20036
-password:
+password: 53008933
 name:
   en: Archfiend's Arrival
   de:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control "Shining Sarcophagus", you can Normal Summon this card without Tributing. If this card is Normal or Special Summoned: You can target 1 monster your opponent controls; take control of it (until the End Phase), but if you did not control "Shining Sarcophagus" at activation, that monster cannot attack while you control it. You can only use this effect of "Archfiend's Arrival" once per turn. Other monsters you control gain 500 ATK during your turn only.
+    If you control "Shining Sarcophagus", you can Normal Summon this card without Tributing. If this card is Normal or Special Summoned: You can target 1 monster your opponent controls; take control of it until the End Phase, but if you did not control "Shining Sarcophagus" at activation, that monster cannot attack while you control it. You can only use this effect of "Archfiend's Arrival" once per turn. Other monsters you control gain 500 ATK during your turn only.
   de:
   es:
   fr:
@@ -38,7 +38,7 @@ series:
 - Skull Archfiend
 images:
 - index: 1
-  image: ArchfiendsArrival-VX04-JP-OP.png
+  image: ArchfiendsArrival-VX04-JP-UR.png
 sets:
   ja:
   - set_number: VX04-JP001
@@ -54,4 +54,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1044500
-fake_password: 100436001
