--- a/data/cards/95440946.yaml
+++ b/data/cards/95440946.yaml
@@ -203,6 +203,10 @@ sets:
     - Secret Rare
     - Extra Secret Rare
     - Quarter Century Secret Rare
+  - set_number: AW01-JP004
+    set_name: High-Resolution Artwork Series
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: DBSS-KR027
     set_name: 'Deck Build Pack: Secret Slayers'
