--- a/data/cards/37818794.yaml
+++ b/data/cards/37818794.yaml
@@ -34,7 +34,7 @@ text:
     Não pode ser destruído por efeitos de card. Nenhum duelista pode escolher este card como alvo de efeitos de card. Durante sua Fase Principal: você pode destruir 1 monstro que seu oponente controla e, se isso acontecer, cause dano ao seu oponente igual ao ATK original desse monstro. Você pode usar este efeito um número de vezes por turno até o número de Monstros Normais usados como Matéria de Fusão para este card. Uma vez por turno, quando um card ou efeito for ativado (Efeito Rápido): você pode descartar 1 card; negue a ativação e, se isso acontecer, destrua esse card e, se isso acontecer, este card ganha 1000 de ATK.
   ja: |-
     「ブラック・マジシャン」＋「真紅眼の黒竜」またはドラゴン族の効果モンスター
-    ①：このカードは効果の対象にならず、効果では破壊されない。②：自分メインフェイズに発動できる。相手フィールドのモンスター１体を選んで破壊し、その元々の攻撃力分のダメージを相手に与える。この効果は１ターン中に、このカードの融合素材とした通常モンスターの数まで使用できる。③：１ターンに１度、魔法・罠・モンスターの効果が発動した時、手札を１枚捨てて発動できる。その発動を無効にして破壊し、このカードの攻撃力を１０００アップする。
+    ①：このカードは効果では破壊されず、お互いはこのカードを効果の対象にできない。②：自分メインフェイズに発動できる（この効果は１ターン中に、このカードの融合素材とした通常モンスターの数まで使用できる）。相手フィールドのモンスター１体を破壊し、その元々の攻撃力分のダメージを相手に与える。③：１ターンに１度、カードの効果が発動した時、手札を１枚捨てて発動できる。その発動を無効にして破壊し、このカードの攻撃力を１０００アップする。
   ko: |-
     "블랙 매지션" ＋ "붉은 눈의 흑룡" 또는 드래곤족 효과 몬스터
     ①: 이 카드는 효과의 대상이 되지 않으며, 효과로는 파괴되지 않는다. ②: 자신 메인 페이즈에 발동할 수 있다. 상대 필드의 몬스터 1장을 골라 파괴하고, 그 원래 공격력만큼의 데미지를 상대에게 준다. 이 효과는 1턴 중에, 이 카드의 융합 소재로 한 일반 몬스터의 수까지 사용할 수 있다. ③: 1턴에 1번, 마법 / 함정 / 몬스터의 효과가 발동했을 때, 패를 1장 버리고 발동할 수 있다. 그 발동을 무효로 하여 파괴하고, 이 카드의 공격력을 1000 올린다.
@@ -131,6 +131,10 @@ sets:
     rarities:
     - Ultra Rare
     - 20th Secret Rare
+  - set_number: AW01-JP003
+    set_name: High-Resolution Artwork Series
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LGB1-KR001
     set_name: Legendary Gold Set
