--- a/data/cards/60461804.yaml
+++ b/data/cards/60461804.yaml
@@ -143,6 +143,10 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Quarter Century Secret Rare
+  - set_number: AW01-JP008
+    set_name: High-Resolution Artwork Series
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: BODE-KR039
     set_name: Burst of Destiny
