--- a/data/cards/90448279.yaml
+++ b/data/cards/90448279.yaml
@@ -195,6 +195,10 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Quarter Century Secret Rare
+  - set_number: AW01-JP005
+    set_name: High-Resolution Artwork Series
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: PHRA-KR045
     set_name: Phantom Rage
