--- a/data/cards/58793369.yaml
+++ b/data/cards/58793369.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：做為此卡發動時的效果處理，可從牌組將１張「輝龍機巧－法夫納」以外的「龍機巧」魔法・陷阱卡加入手牌。②：儀式魔法卡的效果發動及發動的該效果不會被無效化。③：１回合１次，在我方場上存在「龍機巧」怪獸的狀態下，可在怪獸以正面表示被召喚・特殊召喚的狀況下發動。此回合，該正面表示怪獸的等級依據其攻擊力降低，每達１０００就降低１（最低降低至１）。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：作为此卡发动时的效果处理，可从牌组将1张“辉龙机巧－法夫纳”以外的“龙机巧”魔法・陷阱卡加入手牌。②：仪式魔法卡的效果的发动及发动的该效果不会被无效化。③：1回合1次，自己场上有“龙机巧”怪兽存在的状态下，怪兽以表侧表示被召唤・特殊召唤的情况下可以发动。此回合，该表侧表示怪兽的等级，依其攻击力每1000下降1（最低下降至1）。
+    此卡名的卡1回合仅可发动1张。①：作为此卡发动时的效果处理，可从牌组将1张“辉龙机巧-法夫纳”以外的“龙机巧”魔法・陷阱卡加入手牌。②：仪式魔法卡的效果的发动及发动的该效果不会被无效化。③：1回合1次，自己场上有“龙机巧”怪兽存在的状态下，怪兽以表侧表示被召唤・特殊召唤的情况下可以发动。此回合，该表侧表示怪兽的等级，依其攻击力每1000下降1（最低下降至1）。
 card_type: Spell
 property: Field
 series:
@@ -72,6 +72,12 @@ sets:
     set_name: 'Deck Build Pack: Genesis Impactors'
     rarities:
     - Super Rare
+  - set_number: QCCP-JP183
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DBGI-KR031
     set_name: 'Deck Build Pack: Genesis Impactors'
