--- a/data/cards/94187078.yaml
+++ b/data/cards/94187078.yaml
@@ -73,6 +73,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: QCCP-JP184
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DBGI-KR033
     set_name: 'Deck Build Pack: Genesis Impactors'
