--- a/data/cards/13143275.yaml
+++ b/data/cards/13143275.yaml
@@ -34,7 +34,7 @@ text:
     Você não pode Invocar monstros por Invocação-Especial, exceto monstros Dragão. Durante sua Fase Principal: você pode escolher 1 dos seus monstros Dragão que estiver banido ou no seu Cemitério; Invoque-o por Invocação-Especial em uma zona sua para a qual 2 ou mais Monstros Link apontarem. Você só pode usar este efeito de "Dragão-Guarda Pisty" uma vez por turno. Você só pode Invocar um ou mais "Dragão-Guarda Pisty" por Invocação-Especial uma vez por turno.
   ja: |-
     レベル４以下のドラゴン族モンスター１体
-    自分は「守護竜ピスティ」を１ターンに１度しか特殊召喚できず、その②の効果は１ターンに１度しか使用できない。①：このカードがモンスターゾーンに存在する限り、自分はドラゴン族モンスターしか特殊召喚できない。②：自分の墓地のモンスターまたは除外されている自分のモンスターの中から、ドラゴン族モンスター１体を対象として発動できる。そのモンスターを、２体以上のリンクモンスターのリンク先となる自分フィールドに特殊召喚する。
+    自分は「守護竜ピスティ」を１ターンに１度しか特殊召喚できず、その②の効果は１ターンに１度しか使用できない。①：このカードがモンスターゾーンに存在する限り、自分はドラゴン族モンスターしか特殊召喚できない。②：自分の墓地・除外状態のドラゴン族モンスター１体を対象として発動できる。そのモンスターを、２体以上のＬモンスターのリンク先となる自分フィールドに特殊召喚する。
   ko: |-
     레벨 4 이하의 드래곤족 몬스터 1장
     자신은 "수호룡 엘피"를 1턴에 1번밖에 특수 소환할 수 없으며, 그 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 몬스터 존에 존재하는 한, 자신은 드래곤족 몬스터밖에 특수 소환할 수 없다. ②: 자신 묘지의 몬스터 또는 제외되어 있는 자신 몬스터 중에서, 드래곤족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 2장 이상의 링크 몬스터의 링크 앞이 되는 자신 필드에 특수 소환한다.
@@ -43,7 +43,7 @@ text:
     我方１回合僅限特殊召喚１次「守護龍 必思緹」，其②效果１回合僅限使用１次。①：只要此卡存在於怪獸區，我方可特殊召喚的怪獸就僅限龍族怪獸。②：可從我方墓地的怪獸或我方被除外的怪獸中，將１隻龍族怪獸做為對象發動。特殊召喚該怪獸至２隻以上的連結怪獸連結指向的我方場上。
   zh-CN: |-
     等级4以下的龙族怪兽1只
-    自己1回合仅可特殊召唤"守护龙 必思缇"1次，其②效果1回合仅可使用1次。①：只要此卡存在于怪兽区域，自己仅可特殊召唤龙族怪兽。②：从自己墓地的怪兽或被除外的自己的怪兽中，以1只龙族怪兽为对象可以发动。将该怪兽特殊召唤至作为2只以上连接怪兽共同的连接端的自己场上。
+    自己1回合仅可特殊召唤“守护龙 必思缇”1次，其②效果1回合仅可使用1次。①：只要此卡存在于怪兽区域，自己仅可特殊召唤龙族怪兽。②：从自己墓地的怪兽或被除外的自己的怪兽中，以1只龙族怪兽为对象可以发动。将该怪兽特殊召唤至作为2只以上连接怪兽共同的连接端的自己场上。
 card_type: Monster
 monster_type_line: Dragon / Link / Effect
 attribute: DARK
@@ -108,6 +108,12 @@ sets:
     - Super Rare
     - Secret Rare
     - 20th Secret Rare
+  - set_number: QCCP-JP188
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SAST-KR052
     set_name: Savage Strike
