--- a/data/cards/20318029.yaml
+++ b/data/cards/20318029.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     (Efeito Rápido): você pode descartar este card e, depois, escolher 1 monstro Trovão que você controla; ele ganha 500 de ATK. Se este card for banido ou enviado do campo para o Cemitério: você pode adicionar 1 "Matrizdragão do Trovão" do seu Deck à sua mão. Você só pode usar 1 efeito de "Matrizdragão do Trovão" por turno e apenas uma vez por turno.
   ja: |-
-    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードを手札から捨て、自分フィールドの雷族モンスター１体を対象として発動できる。そのモンスターの攻撃力は５００アップする。この効果は相手ターンでも発動できる。②：このカードが除外された場合またはフィールドから墓地へ送られた場合に発動できる。デッキから「雷源龍－サンダー・ドラゴン」１体を手札に加える。
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分・相手ターンに、このカードを手札から捨て、自分フィールドの雷族モンスター１体を対象として発動できる。そのモンスターの攻撃力は５００アップする。②：このカードが除外された場合、またはフィールドから墓地へ送られた場合に発動できる。デッキから「雷源龍－サンダー・ドラゴン」１体を手札に加える。
   ko: |-
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드를 패에서 버리고, 자신 필드의 번개족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력은 500 올린다. 이 효과는 상대 턴에도 발동할 수 있다. ②: 이 카드가 제외되었을 경우 또는 필드에서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "뇌원룡－썬더 드래곤" 1장을 패에 넣는다.
   zh-TW: |-
@@ -116,6 +116,12 @@ sets:
     set_name: Soul Fusion
     rarities:
     - Common
+  - set_number: QCCP-JP169
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SOFU-KR018
     set_name: Soul Fusion
