--- a/data/cards/21082832.yaml
+++ b/data/cards/21082832.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Este card pode ser usado para a Invocação-Ritual de qualquer Monstro de Ritual "Caos" ou "Soldado do Lustro Negro". Você também deve oferecer como Tributo monstros da sua mão ou do campo e/ou banir "Dragão Branco de Olhos Azuis" ou "Mago Negro" do seu Cemitério, cuja soma dos Níveis seja exatamente igual ao Nível do Monstro de Ritual "Caos" ou "Soldado do Lustro Negro" que você Invocar por Invocação-Ritual.
   ja: |-
-    「カオス」儀式モンスターの降臨に必要。①：レベルの合計が儀式召喚するモンスターと同じになるように、自分の手札・フィールドのモンスターをリリース、またはリリースの代わりに自分の墓地から「青眼の白龍」または「ブラック・マジシャン」を除外し、手札から「カオス」儀式モンスター１体を儀式召喚する。
+    ①：レベルの合計が儀式召喚するモンスターと同じになるように、自分の手札・フィールドのモンスターをリリース、またはリリースの代わりに自分の墓地から「青眼の白龍」か「ブラック・マジシャン」を除外し、手札から「カオス」儀式モンスター１体を儀式召喚する。
   ko: |-
     "카오스" 의식 몬스터의 의식 소환에 필요. ①: 레벨의 합계가 의식 소환할 몬스터와 같아지도록, 자신의 패 / 필드의 몬스터를 릴리스, 또는 릴리스 대신에 자신 묘지에서 "푸른 눈의 백룡" 또는 "블랙 매지션"을 제외하고, 패에서 "카오스" 의식 몬스터 1장을 의식 소환한다.
   zh-TW: |-
@@ -201,6 +201,12 @@ sets:
     rarities:
     - Super Parallel Rare
     - Secret Rare
+  - set_number: QCCP-JP196
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: MVP1-KR008
     set_name: Yu-Gi-Oh! The Dark Side of Dimensions Movie Pack
