--- a/data/cards/29596581.yaml
+++ b/data/cards/29596581.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode descartar este card; adicione à sua mão 1 dos seus cards "Dragão do Trovão" que estiverem banidos ou no seu Cemitério, exceto "Rugidodragão do Trovão". Se este card for banido ou enviado do campo para o Cemitério: você pode Invocar por Invocação-Especial 1 monstro "Dragão do Trovão" do seu Deck, em Posição de Defesa, mas devolva-o para a mão durante a Fase Final. Você só pode usar 1 efeito de "Rugidodragão do Trovão" por turno e apenas uma vez por turno.
   ja: |-
-    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードを手札から捨てて発動できる。自分の墓地のカード及び除外されている自分のカードの中から、「雷獣龍－サンダー・ドラゴン」以外の「サンダー・ドラゴン」カード１枚を選んで手札に加える。②：このカードが除外された場合またはフィールドから墓地へ送られた場合に発動できる。デッキから「サンダー・ドラゴン」モンスター１体を守備表示で特殊召喚する。この効果で特殊召喚したモンスターはエンドフェイズに持ち主の手札に戻る。
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードを手札から捨てて発動できる。「雷獣龍－サンダー・ドラゴン」以外の自分の墓地・除外状態の「サンダー・ドラゴン」カード１枚を手札に加える。②：このカードが除外された場合、またはフィールドから墓地へ送られた場合に発動できる。デッキから「サンダー・ドラゴン」モンスター１体を守備表示で特殊召喚する。この効果で特殊召喚したモンスターはエンドフェイズに手札に戻る。
   ko: |-
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드를 패에서 버리고 발동할 수 있다. 자신 묘지의 카드 및 제외되어 있는 자신의 카드 중에서, "뇌수룡－썬더 드래곤" 이외의 "썬더 드래곤" 카드 1장을 골라 패에 넣는다. ②: 이 카드가 제외되었을 경우 또는 필드에서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "썬더 드래곤" 몬스터 1장을 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터는 엔드 페이즈에 주인의 패로 되돌아간다.
   zh-TW: |-
@@ -96,6 +96,12 @@ sets:
     set_name: Soul Fusion
     rarities:
     - Common
+  - set_number: QCCP-JP172
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SOFU-KR021
     set_name: Soul Fusion
