--- a/data/cards/30086349.yaml
+++ b/data/cards/30086349.yaml
@@ -34,7 +34,7 @@ text:
     Se este card for Invocado por Invocação-Fusão: você pode enviar 1 monstro "Olhos Vermelhos" da sua mão ou do Deck para o Cemitério e, se isso acontecer, cause dano ao seu oponente igual à metade do ATK original desse monstro. Se este card for enviado da Zona de Monstros para o Cemitério: você pode escolher 1 Monstro Normal no seu Cemitério; Invoque-o por Invocação-Especial.
   ja: |-
     レベル７「レッドアイズ」モンスター＋レベル６ドラゴン族モンスター
-    ①：このカードが融合召喚に成功した場合に発動できる。手札・デッキから「レッドアイズ」モンスター１体を墓地へ送り、そのモンスターの元々の攻撃力の半分のダメージを相手に与える。②：このカードがモンスターゾーンから墓地へ送られた場合、自分の墓地の通常モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
+    ①：このカードが融合召喚した場合に発動できる。手札・デッキから「レッドアイズ」モンスター１体を墓地へ送り、そのモンスターの攻撃力の半分のダメージを相手に与える。②：このカードがモンスターゾーンから墓地へ送られた場合、自分の墓地の通常モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
     레벨 7 "붉은 눈" 몬스터 ＋ 레벨 6 드래곤족 몬스터
     ①: 이 카드가 융합 소환에 성공했을 경우에 발동할 수 있다. 패 / 덱에서 "붉은 눈" 몬스터 1장을 묘지로 보내고, 그 몬스터의 원래 공격력 절반의 데미지를 상대에게 준다. ②: 이 카드가 몬스터 존에서 묘지로 보내졌을 경우, 자신 묘지의 일반 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
@@ -106,6 +106,13 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: QCCP-JP114
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Ultimate Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: INOV-KR041
     set_name: 'Invasion: Vengeance'
