--- a/data/cards/31786629.yaml
+++ b/data/cards/31786629.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：可從手牌捨棄此卡發動。從牌組將最多２隻「雷龍」加入手牌。
   zh-CN: |-
-    ①：将此卡从手牌中舍弃可以发动。从牌组将最多2只“雷龙”加入手牌。
+    ①：将此卡从手牌中舍弃可以发动。从牌组将最多２只“雷龙”加入手牌。
 card_type: Monster
 monster_type_line: Thunder / Effect
 attribute: LIGHT
@@ -229,6 +229,12 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
+  - set_number: QCCP-JP168
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: MRD-K097
     set_name: Metal Raiders
