--- a/data/cards/31833038.yaml
+++ b/data/cards/31833038.yaml
@@ -34,7 +34,7 @@ text:
     Nenhum duelista pode escolher este card como alvo de efeitos de monstro. Uma vez por turno (Efeito Rápido): você pode escolher 1 monstro com a face para cima no campo; ele perde 500 de ATK/DEF. Seu oponente não pode ativar cards ou efeitos em resposta à ativação deste efeito. No começo da Etapa de Dano, se este card atacar um monstro do oponente: você pode colocar esse monstro do oponente em uma zona para a qual este card apontar e tomar o controle dele, mas envie-o para o Cemitério durante a Fase Final do próximo turno.
   ja: |-
     効果モンスター３体以上
-    ①：このカードはモンスターの効果の対象にならない。②：１ターンに１度、フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターの攻撃力・守備力は５００ダウンする。この効果の発動に対して相手はカードの効果を発動できない。この効果は相手ターンでも発動できる。③：このカードが相手モンスターに攻撃するダメージステップ開始時に発動できる。その相手モンスターをこのカードのリンク先に置いてコントロールを得る。そのモンスターは次のターンのエンドフェイズに墓地へ送られる。
+    ①：お互いはフィールドのこのカードをモンスターの効果の対象にできない。②：自分・相手ターンに１度、フィールドの表側表示モンスター１体を対象として発動できる（この効果の発動に対して、相手はカードの効果を発動できない）。そのモンスターの攻撃力・守備力は５００ダウンする。③：このカードが相手モンスターに攻撃するダメージステップ開始時に発動できる。その相手モンスターをこのカードのリンク先に置いてコントロールを得る。この効果で得たモンスターは次のターンのエンドフェイズに墓地へ送られる。
   ko: |-
     효과 몬스터 3장 이상
     ①: 이 카드는 몬스터의 효과의 대상이 되지 않는다. ②: 1턴에 1번, 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력 / 수비력은 500 내린다. 이 효과의 발동에 대하여 상대는 카드의 효과를 발동할 수 없다. 이 효과는 상대 턴에도 발동할 수 있다. ③: 이 카드가 상대 몬스터에 공격하는 데미지 스텝 개시시에 발동할 수 있다. 그 상대 몬스터를 이 카드의 링크 앞에 놓고 컨트롤을 얻는다. 그 몬스터는 다음 턴의 엔드 페이즈에 묘지로 보내진다.
@@ -169,6 +169,13 @@ sets:
     set_name: Burst of Destiny +1 Bonus Pack
     rarities:
     - Prismatic Secret Rare
+  - set_number: QCCP-JP102
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Ultimate Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CIBR-KR042
     set_name: Circuit Break
