--- a/data/cards/69815951.yaml
+++ b/data/cards/69815951.yaml
@@ -27,7 +27,8 @@ text:
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com "Drytron Meteonis". Seu oponente não pode escolher este card como alvo de efeitos de monstro. Se a soma dos Níveis dos monstros usados para sua Invocação-Ritual for 2 ou menos, este card pode atacar todos os monstros Invocados por Invocação-Especial que seu oponente controla uma vez cada. Durante o turno do seu oponente (Efeito Rápido): você pode banir monstros do seu Cemitério cujo ATK combinado seja exatamente igual a 2000 ou 4000 e, depois, escolha 1 card com a face para cima que seu oponente controla para cada 2000 de ATK desse total; envie esse(s) card(s) para o Cemitério. Você só pode usar este efeito de "Drytron Meteonis Draconids" uma vez por turno.
   ja: |-
-    「流星輝巧群」により降臨。このカード名の③の効果は１ターンに１度しか使用できない。①：フィールドのこのカードは相手モンスターの効果の対象にならない。②：このカードの儀式召喚に使用したモンスターのレベルの合計が２以下の場合、このカードは特殊召喚された相手モンスター全てに１回ずつ攻撃できる。③：相手ターンに、攻撃力の合計が２０００または４０００になるように自分の墓地からモンスターを除外し、その合計２０００につき１枚、相手フィールドの表側表示のカードを対象として発動できる。そのカードを墓地へ送る。
+    「流星輝巧群」により降臨
+    このカード名の③の効果は１ターンに１度しか使用できない。①：相手はフィールドのこのカードをモンスターの効果の対象にできない。②：このカードの儀式召喚に使用したモンスターのレベルの合計が２以下の場合、このカードは特殊召喚された相手モンスター全てに１回ずつ攻撃できる。③：相手ターンに、攻撃力の合計が２０００か４０００になるように自分の墓地からモンスターを除外し、その合計２０００につき１枚、相手フィールドの表側表示カードを対象として発動できる。そのカードを墓地へ送る。
   ko: |-
     "메테오니스 드라이트론"에 의해 의식 소환. 이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 필드의 이 카드는 상대 몬스터의 효과의 대상이 되지 않는다. ②: 이 카드의 의식 소환에 사용한 몬스터의 레벨의 합계가 2 이하일 경우, 이 카드는 특수 소환된 상대 몬스터 전부에 1회씩 공격할 수 있다. ③: 상대 턴에 공격력의 합계가 2000 또는 4000 이 되도록 자신 묘지에서 몬스터를 제외하고, 그 합계 2000 당 1장, 상대 필드의 앞면 표시의 카드를 대상으로 하여 발동할 수 있다. 그 카드를 묘지로 보낸다.
   zh-TW: |-
@@ -83,6 +84,13 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: QCCP-JP180
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Ultimate Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DBGI-KR029
     set_name: 'Deck Build Pack: Genesis Impactors'
