--- a/data/cards/87571563.yaml
+++ b/data/cards/87571563.yaml
@@ -117,6 +117,12 @@ sets:
     set_name: 'Structure Deck R: Dragunity Drive'
     rarities:
     - Common
+  - set_number: QCCP-JP197
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SAST-KR062
     set_name: Savage Strike
