--- a/data/cards/95238394.yaml
+++ b/data/cards/95238394.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Invoque por Invocação-Fusão 1 Monstro de Fusão Trovão do seu Deck Adicional, ao embaralhar no Deck as Matérias de Fusão listadas nele, dentre seus cards no campo, no seu Cemitério e/ou seus cards banidos com a face para cima. Durante sua Fase Principal, exceto no turno em que este card foi enviado para o Cemitério: você pode banir este card do seu Cemitério; adicione 1 monstro Trovão do seu Deck à sua mão. Você só pode usar cada efeito de "Fusão do Dragão do Trovão" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分のフィールド・墓地のモンスター及び除外されている自分のモンスターの中から、雷族の融合モンスターカードによって決められた融合素材モンスターを持ち主のデッキに戻し、その融合モンスター１体をＥＸデッキから融合召喚する。②：墓地のこのカードを除外して発動できる。デッキから雷族モンスター１体を手札に加える。この効果はこのカードが墓地へ送られたターンには発動できない。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分のフィールド・墓地・除外状態のモンスターを融合素材としてデッキに戻し、雷族の融合モンスター１体を融合召喚する。②：このターンに墓地へ送られていないこのカードを墓地から除外して発動できる。デッキから雷族モンスター１体を手札に加える。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신의 필드 / 묘지의 몬스터 및 제외되어 있는 자신 몬스터 중에서, 번개족 융합 몬스터 카드에 기재된 융합 소재 몬스터를 주인의 덱으로 되돌리고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 번개족 몬스터 1장을 패에 넣는다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW: |-
@@ -93,6 +93,12 @@ sets:
     set_name: Soul Fusion
     rarities:
     - Common
+  - set_number: QCCP-JP175
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SOFU-KR060
     set_name: Soul Fusion
