--- a/data/cards/kdb5000.yaml
+++ b/data/cards/kdb5000.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Especial. Requer 3 Tributos para ser Invocado por Invocação-Normal (não pode ser Baixado Normalmente). A Invocação-Normal deste card não pode ser negada. Quando Invocado por Invocação-Normal, outros cards e efeitos não podem ser ativados. Quando este card for Invocado por Invocação-Normal: você pode pagar PV até restarem apenas 100; este card ganha ATK/DEF igual aos PV pagos. Você pode pagar 1000 PV e, depois, escolha 1 monstro no campo; destrua o alvo.
   ja: |-
-    このカードは特殊召喚できない。このカードを通常召喚する場合、３体をリリースして召喚しなければならない。①：このカードの召喚は無効化されない。②：このカードの召喚成功時には、このカード以外の魔法・罠・モンスターの効果は発動できない。③：このカードが召喚に成功した時、１００ＬＰになるようにＬＰを払って発動できる。このカードの攻撃力・守備力は払った数値分アップする。④：１０００ＬＰを払い、フィールドのモンスター１体を対象として発動できる。そのモンスターを破壊する。
+    このカードは特殊召喚できない。このカードを通常召喚する場合、３体をリリースして召喚しなければならない。①：このカードの召喚は無効化されない。②：このカードの召喚成功時にお互いは他のカードの効果を発動できない。③：このカードが召喚した時、１００ＬＰになるようにＬＰを払って発動できる。このカードの攻撃力・守備力は払った数値分アップする。④：１０００ＬＰを払い、フィールドのモンスター１体を対象として発動できる。そのモンスターを破壊する。
   ko: |-
     이 카드는 특수 소환할 수 없다. 이 카드를 통상 소환할 경우, 3장을 릴리스하고 일반 소환해야 한다. ①: 이 카드의 일반 소환은 무효화되지 않는다. ②: 이 카드의 일반 소환 성공시에는, 이 카드 이외의 마법 / 함정 / 몬스터의 효과는 발동할 수 없다. ③: 이 카드가 일반 소환에 성공했을 때, 100 LP가 되도록 LP를 지불하고 발동할 수 있다. 이 카드의 공격력 / 수비력은 지불한 수치만큼 올린다. ④: 1000 LP를 지불하고, 필드의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 파괴한다.
   zh-TW: |-
@@ -265,6 +265,11 @@ sets:
   - set_number: 25DS-JP001
     set_name: Quarter Century Duel Set "The Winged Dragon of Ra"
     rarities:
+    - Quarter Century Secret Rare
+  - set_number: QCCP-JP200
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Ultimate Rare
     - Quarter Century Secret Rare
   ko:
   - set_number: MOV-KR007
