--- a/rush.yaml
+++ b/rush.yaml
@@ -136256,6 +136256,329 @@ yugipedia_page_id: 1044876
 ---
 konami_id:
 name:
+  en: Straynge Cat Witch
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: はぐれ使い<ruby>魔<rt>ま</rt></ruby><ruby>女<rt>じょ</rt></ruby>
+  ja_romaji: Hagure Tsukamajo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have no other monsters on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Sevens Road Charm Witch" or 1 "Sevens Road Witch" from your Graveyard face-up to your field. Then, you can add 1 "Fusion" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: EARTH
+level: 1
+atk: 0
+def: 1400
+series:
+- Straynge Cat
+images:
+- index: 1
+  image: StrayngeCatWitch-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP007
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044915
+---
+konami_id:
+name:
+  en: Hybridrive Tusk
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハイブリッドライブ・タスク
+  ja_romaji: Haiburiddoraibu Tasuku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 "Hybridrive Screwdriver" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 3
+atk: 800
+def: 700
+series:
+- Hybridrive
+images:
+- index: 1
+  image: HybridriveTusk-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP004
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044916
+---
+konami_id:
+name:
+  en: Hybridrive Screwdriver
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハイブリッドライブ・スクリュードライバー
+  ja_romaji: Haiburiddoraibu Sukuryūdoraibā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 2 Dragon Type monsters and 2 Machine Type monsters from your Graveyard on the bottom of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 monster on the field. Then, neither player can Normal or Special Summon monsters with the same original name as the monster destroyed by this effect face-up until the end of your opponent's next turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 1600
+series:
+- Hybridrive
+images:
+- index: 1
+  image: HybridriveScrewdriver-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP006
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044917
+---
+konami_id:
+name:
+  en: Hybridrive Back Fusion
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハイブリッドライブ・バックフュージョン
+  ja_romaji: Haiburiddoraibu Bakkufyūjon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 4 Dragon Type and/or Machine Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Your opponent Special Summons 1 monster from their Graveyard to their field in face-down Defense Position. Then, you can Fusion Summon by shuffling 1 Dragon Type monster and 1 Machine Type monster from your Graveyard into the Deck as material. You can only attack with Fusion Monsters until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Hybridrive
+images:
+- index: 1
+  image: HybridriveBackFusion-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP052
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044918
+---
+konami_id:
+name:
+  en: Bluetech Burst Rex
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ブルーテック・バーストレックス
+  ja_romaji: Burūtekku Bāsutorekkusu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase that you Fusion Summoned this card, shuffle 3 monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy up to 3 face-down cards on your opponent's field, and this card gains ATK equal to [the number of destroyed cards] x 500 until the end of this turn. Then, you can make all face-up monsters on your opponent's field lose 1000 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 3300
+def: 2500
+materials:
+  en: |-
+    "Blue Tooth Burst Dragon" + "Jointech Rex"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- High Tech Dragon
+images:
+- index: 1
+  image: BluetechBurstRex-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP044
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044920
+---
+konami_id:
+name:
   en: Animagica Leader
   de:
   es:
