--- a/rush.yaml
+++ b/rush.yaml
@@ -138509,3 +138509,379 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1050691
+---
+konami_id:
+name:
+  en: Hybridrive Scale
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハイブリッドライブ・スケイル
+  ja_romaji: Haiburiddoraibu Sukeiru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have a LIGHT Attribute Dragon Type monster and an EARTH Attribute Machine Type monster in your Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top card of your Deck to the Graveyard. Then, this turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a Dragon Type or Machine Type monster in Attack Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 3
+atk: 800
+def: 700
+series:
+- Hybridrive
+images:
+- index: 1
+  image: HybridriveScale-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP003
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1051252
+---
+konami_id:
+name:
+  en: Hybridrive Lizard
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハイブリッドライブ・リザード
+  ja_romaji: Haiburiddoraibu Rizādo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Hybridrive Scale" or 1 "Hybridrive Tusk" from your Graveyard to your field in face-up Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 3
+atk: 800
+def: 700
+series:
+- Hybridrive
+images:
+- index: 1
+  image: HybridriveLizard-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP005
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1051254
+---
+konami_id:
+name:
+  en: Hybridrive Restruct
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハイブリッドライブ・リストラクト
+  ja_romaji: Haiburiddoraibu Risutorakuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 2 LIGHT Attribute Dragon Type monsters from your Graveyard on the bottom of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 EARTH Attribute Machine Type monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Hybridrive
+images:
+- index: 1
+  image: HybridriveRestruct-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP054
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1051256
+---
+konami_id:
+name:
+  en: Hybridrive Bumper
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハイブリッドライブ・バンパー
+  ja_romaji: Haiburiddoraibu Banpā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack, shuffle 4 Dragon Type and/or Machine Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attacking monster loses 1600 ATK until the end of this turn. Then, if you returned 2 different Types to meet the requirement, you can destroy 1 face-up Level 9 or lower monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Hybridrive
+images:
+- index: 1
+  image: HybridriveBumper-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP059
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1051257
+---
+konami_id:
+name:
+  en: Releaslayer
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: リリースレイヤー
+  ja_romaji: Rirīsureiyā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top card of your Deck to the Graveyard. If you sent a Spellcaster Type monster to the Graveyard by this effect, this turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Spellcaster Type monster in Attack Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: DARK
+level: 4
+atk: 1300
+def: 0
+images:
+- index: 1
+  image: Releaslayer-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP008
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1051258
+---
+konami_id:
+name:
+  en: Sevens Road Ultima Witch
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: セブンスロード・アルテマウィッチ
+  ja_romaji: Sebunsu Rōdo Arutema Wicchi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle 1 Spell Card from your opponent's Graveyard into the Deck. Then, you can add 1 Spell Card from your Graveyard to your hand. If you do, you can only activate 1 Normal Spell Card until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Fusion / Effect
+attribute: DARK
+level: 10
+atk: 3300
+def: 1600
+materials:
+  en: |-
+    "Sevens Road Witch" + 1 Magical Knight Type or Spellcaster Type Fusion Monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Sevens Road
+images:
+- index: 1
+  image: SevensRoadUltimaWitch-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP045
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1051262
