--- a/data/rush/yugipedia1044920.yaml
+++ b/data/rush/yugipedia1044920.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: ブルーテック・バーストレックス
-  ja_romaji: Burūtekku Bāsutorekkusu
+  ja_romaji: Burūtekku Bāsuto Rekkusu
   ko:
   ko_rr:
   zh-TW:
