--- a/data/cards/87116928.yaml
+++ b/data/cards/87116928.yaml
@@ -34,7 +34,7 @@ text:
     Não pode ser usado como Matéria de Fusão. Primeiro deve ser Invocado por Invocação-Especial (do seu Deck Adicional) ao enviar os cards acima de qualquer campo para o Cemitério. O ATK original deste card se torna 1200 x o número de matérias usadas para sua Invocação-Especial.
   ja: |-
     「サイバー・ドラゴン」モンスター＋ＥＸモンスターゾーンのモンスター１体以上
-    自分・相手フィールドの上記カードを墓地へ送った場合のみ、ＥＸデッキから特殊召喚できる（「融合」は必要としない）。このカードは融合素材にできない。①：このカードの元々の攻撃力は、このカードの融合素材としたモンスターの数×１２００になる。
+    自分・相手フィールドの上記のカードを墓地へ送った場合のみ、ＥＸデッキから特殊召喚できる。このカードは融合素材にできない。①：このカードの元々の攻撃力は、このカードの融合素材としたモンスターの数×１２００になる。
   ko: |-
     "사이버 드래곤" 몬스터 ＋ 엑스트라 몬스터 존의 몬스터 1장 이상
     자신 / 상대 필드의 상기 카드를 묘지로 보냈을 경우에만, 엑스트라 덱에서 특수 소환할 수 있다("융합"은 필요로 하지 않는다). 이 카드는 융합 소재로 할 수 없다. ①: 이 카드의 원래 공격력은, 이 카드의 융합 소재로 한 몬스터의 수 × 1200 이 된다.
@@ -42,8 +42,8 @@ text:
     「電子龍」怪獸＋額外怪獸區的怪獸１隻以上
     僅限在將我方・對方場地上的上述卡片送至墓地的狀況下，可從額外牌組特殊召喚（不需要「融合」）。此卡無法做為融合素材。①：此卡原本的攻擊力變為用作此卡融合素材的怪獸數量×１２００。
   zh-CN: |-
-    "电子龙"怪兽＋额外怪兽区域的怪兽1只以上
-    仅在将自己・对手场上的上述卡送至墓地的情况下可以从额外牌组特殊召唤（无需"融合"）。此卡不可作为融合素材。①：此卡原本的攻击力变为用作此卡的融合素材的怪兽数量×1200。
+    “电子龙”怪兽＋额外怪兽区域的怪兽1只以上
+    仅在将自己・对手场上的上述卡送至墓地的情况下可以从额外牌组特殊召唤（无需“融合”）。此卡不可作为融合素材。①：此卡原本的攻击力变为用作此卡的融合素材的怪兽数量×1200。
 card_type: Monster
 monster_type_line: Machine / Fusion / Effect
 attribute: DARK
@@ -137,6 +137,12 @@ sets:
     - Super Rare
     - Secret Rare
     - Collector's Rare
+  - set_number: QCCP-JP024
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: RC02-KR002
     set_name: Rarity Collection 20th Anniversary Edition
