--- a/data/cards/93437091.yaml
+++ b/data/cards/93437091.yaml
@@ -41,7 +41,7 @@ text:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキから以下のカードを合計３枚選んで相手に見せ、相手はその中からランダムに１枚選ぶ。そのカード１枚を自分の手札に加え、残りのカードはデッキに戻す。
     ●「ブルーアイズ」モンスター
-    ●「ビンゴマシーンＧＯ！ＧＯ！」以外の、「青眼の白龍」または「青眼の究極竜」のカード名が記された魔法・罠カード
+    ●「ビンゴマシーンＧＯ！ＧＯ！」を除く、「青眼の白龍」「青眼の究極竜」のいずれかのカード名が記された魔法・罠カード
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 덱에서 이하의 카드를 합계 3장 골라 상대에게 보여주고, 상대는 그 중에서 무작위로 1장 고른다. 그 카드 1장을 자신의 패에 넣고, 남은 카드는 덱으로 되돌린다.
     ●"푸른 눈" 몬스터
@@ -116,6 +116,12 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: QCCP-JP012
+    set_name: Quarter Century Chronicle side:Pride
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DP20-KR003
     set_name: 'Duelist Pack: Legend Duelist 3'
